maincss.css
 /* Universal CSS agnostic of size */
:root{
    --black: #191818;
    --gray: #868E96;
    --white: #ffffff;
}


body{
    font-family: 'New Haas Unica W1G', 'helvetica', sans-serif;
}


.headerlogo {
    fill: var(--black);
    width: 260px;
    margin: 20vh auto 60px auto;
    
}


.maincontainer{

    width: 100%;
    text-align: center;
}

.welcometitle{
 width: 40vw;
 margin: 0 auto;
}

.introcopy{

}

.devdisclaimer{
 font-size: 12px;
 color: var(--gray);
}


.demoCTA{
    display: block;
    width: 100px;
    height: 40px;
    margin: 40px auto;
    background-color: var(--black);
    border-radius: 6px;
    color: var(--white);
    text-decoration: none;
    font-size: 16px;
    font-style: bold;
    line-height: 42px;
}

.demoCTA:hover{
    opacity: 0.9;
}








 /* tiny devices (phones, below 480px) */
 @media only screen and (max-width: 480px) {
    .welcometitle{
        width: 95vw;
        margin: 0 auto;
        text-align: left;
       }
 }





  /* small devices (phones, between 600px and 480px) */
@media only screen and (min-width: 481px) {
    .welcometitle{
        width: 90vw;
        margin: 0 auto;
       }
}






/* Small devices (tablet portrait, above 600px) */
@media only screen and (min-width: 601px) {

}





/* Medium devices (tablet landscape, above 900px) */
@media only screen and (min-width: 900px) {

}





/* Standard devices (laptop, above 1200px) */
@media only screen and (min-width: 1200px) {

}








  /* large devices (1080p, above 1600px) */
  @media only screen and (min-width: 1800px) {

} 

